# ha-integration-iris

./: .gitignore  .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/iris/: __init__.py  binary_sensor.py  bootstrap.py  button.py  catalog.py  client.py  command_bus.py  command_support.py  config_flow.py  const.py  dashboard.py  diagnostics.py  entity_factory.py  entity_registry_sync.py  event.py  manifest.json  select.py  sensor.py  services.py  services.yaml  store.py  strings.json  switch.py  versioning.py  websocket_client.py
custom_components/iris/translations/: ru.json
tests/: common.py  test_binary_sensor.py  test_catalog.py  test_catalog_platforms.py  test_commands.py  test_config_flow.py  test_init.py  test_sensor.py  test_store.py  test_websocket_client.py
tests/fixtures/contract/: bootstrap.json  catalog.json  dashboard.json  state.json
