[project]
name = "iris-ha-integration"
version = "0.1.0"
description = "IRIS Home Assistant custom integration"
requires-python = ">=3.11,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "homeassistant==2024.3.3",
    "pytest-homeassistant-custom-component==0.13.109",
    "zeroconf==0.148.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["custom_components", "tests"]

[tool.ruff.lint]
select = ["E9", "F811", "F821", "F822", "F823", "B", "I", "UP", "SIM", "C4", "RET", "RUF", "PERF"]

[tool.uv]
package = false
